# profile.mobile.apps.native.call-ui

./: .cproject  .gitignore  .project  CMakeLists.txt  org.tizen.call-ui-1.0.0-arm-debug.tpk  org.tizen.call-ui-1.0.0-arm.tpk  org.tizen.call-ui-1.0.0-arm_debug.tpk  org.tizen.call-ui-1.0.0-i386-debug.tpk  org.tizen.call-ui-1.0.0-i386.tpk  org.tizen.call-ui-1.0.0-i386_debug.tpk  org.tizen.call-ui.efl  org.tizen.call-ui.manifest  org.tizen.call-ui.xml  project_def.prop  tizen-manifest.xml
CMake/: CMakeLists.txt
CMake/po/: CMakeLists.txt
SDK-Project/call-ui/: .cproject  .project  project_def.prop  tizen-manifest.xml
SDK-Project/call-ui/res/po/: ar.po  ca.po  cs.po  el_GR.po  en.po  es_ES.po  et.po  fr_CA.po  hi.po  hr.po  is.po  ka.po  nb.po  nl.po  pt_PT.po  sk.po  zh_TW.po
edje_src/edc/: callui-color-classes.edc  callui-parts.edc
edje_src/edc/call_edc/: callui-keypad.edc  callui-view-button-layout.edc  callui-view-caller-info.edc  callui-view-elements.edc  callui-view-incoming-lock.edc  callui-view-lock-screen.edc  callui-view-main-layout.edc  callui-view-multi-call-list.edc  callui-view-one-hold-in-conference.edc  callui-view-quick-pannel.edc  callui_view_end_call.edc  callui_view_incoming_active.edc  edc_image_macro.edc
inc/: callui-action-bar.h  callui-color-box.h  callui-common-def.h  callui-common-defines.h  callui-common-types.h  callui-common.h  callui-debug.h  callui-display.h  callui-dpm.h  callui-indicator.h  callui-keypad.h  callui-listeners-collection.h  callui-lock-manager.h  callui-manager.h  callui-model-utils-priv.h  callui-proximity-lock-manager.h  callui-sound-manager-priv.h  callui-sound-manager.h  callui-state-provider-priv.h  callui-state-provider.h  callui-view-active-incoming-call.h  callui-view-callend.h  callui-view-caller-info-defines.h  callui-view-circle.h  callui-view-dialing.h  callui-view-elements-defines.h  callui-view-elements.h  callui-view-incoming-call-noti.h  callui-view-incoming-call.h  callui-view-incoming-lock.h  callui-view-layout-hd.h  callui-view-layout.h  callui-view-lock-screen.h  callui-view-manager.h  callui-view-multi-call-conf.h  callui-view-multi-call-list.h  callui-view-multi-call-split.h  callui-view-quickpanel.h  callui-view-single-call.h  callui-window.h  (+1 more)
include/: callui-common.h  callui-keypad.h  callui-view-caller-info-defines.h  callui-view-caller-info-metric.h  callui-view-dialing.h  callui-view-layout-hd.h  callui-view-layout-wvga.h  callui-view-lock-screen.h  callui-view-multi-call-conf.h  callui-view-multi-call-list.h  callui-view-multi-call-split.h  callui.h
packaging/: org.tizen.call-ui.spec
po/: CMakeLists.txt  en_US.po  es_US.po  hu.po  kk.po  mk.po  tr_TR.po
res/call_edc/: call.edc  callui-keypad.edc  callui-view-button-layout.edc  callui-view-caller-info.edc  callui-view-elements.edc  callui-view-incoming-lock.edc  callui-view-lock-screen.edc  callui-view-main-layout.edc  callui-view-multi-call-list.edc  callui-view-one-hold-in-conference.edc  callui-view-quick-pannel-landscape.edc  callui-view-quick-pannel.edc  callui_view_end_call.edc  callui_view_incoming_active.edc  edc_image_macro.edc
res/edc/: callui-color-classes.h
res/edc/call_edc/: call.edc  callui-keypad.edc  callui-view-button-layout.edc  callui-view-caller-info.edc  callui-view-elements.edc  callui-view-incoming-lock.edc  callui-view-lock-screen.edc  callui-view-main-layout.edc  callui-view-multi-call-list.edc  callui-view-one-hold-in-conference.edc  callui-view-quick-pannel-landscape.edc  callui-view-quick-pannel.edc  callui_view_end_call.edc  callui_view_incoming_active.edc
res/edc/call_theme/: call_theme.edc
res/edje/: call.edc  call_theme.edc
res/edje_src/edc/: callui-color-classes.edc
res/edje_src/edc/call_edc/: callui-keypad.edc  callui-view-button-layout.edc  callui-view-caller-info.edc  callui-view-elements.edc  callui-view-incoming-lock.edc  callui-view-lock-screen.edc  callui-view-main-layout.edc  callui-view-multi-call-list.edc  callui-view-one-hold-in-conference.edc  callui-view-quick-pannel-landscape.edc  callui-view-quick-pannel.edc  callui_view_end_call.edc  callui_view_incoming_active.edc  edc_image_macro.edc
res/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+11 more)
res/themes/: call_genlist_theme.edc  call_theme.edc
src/: callui-action-bar.c  callui-color-box.c  callui-common.c  callui-display.c  callui-dpm.c  callui-indicator.c  callui-keypad.c  callui-listeners-collection.c  callui-lock-manager.c  callui-manager.c  callui-model-utils.c  callui-proximity-lock-manager.c  callui-sound-manager.c  callui-state-provider.c  callui-view-active-incoming-call.c  callui-view-callend.c  callui-view-circle.c  callui-view-dialing.c  callui-view-elements.c  callui-view-incoming-call-noti.c  callui-view-incoming-call.c  callui-view-incoming-lock.c  callui-view-lock-screen.c  callui-view-manager.c  callui-view-multi-call-conf.c  callui-view-multi-call-list.c  callui-view-multi-call-split.c  callui-view-quickpanel.c  callui-view-single-call.c  callui-window.c  callui.c
